--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -254,9 +254,9 @@ a img {
     height: 29px;
     margin-top: -4px; }
   .subcat-arrow {
-    background: url(/images/ui/subcat-arrow.png); }
+    background: url(/images/ui/subcat-arrow.png) no-repeat; }
   .leaf-arrow {
-    background: url(/images/ui/leaf-arrow.png); }
+    background: url(/images/ui/leaf-arrow.png) no-repeat; }
   .divider {
     height: 5px;
     border-top: 1px solid #b3b3b3;
