--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -1,7 +1,7 @@
 /* css for jwysiwyg */
 body {
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-  font-size: 0.8em;
+  font-size: 16px;
 }
 
 p {
