--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -30,6 +30,7 @@ a img {
       color: #880000; } } }
 
 #canvas .page .content {
+  min-height: 120px;
   padding: 20px 10px;
   font-size: 16px;
   label {
