--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -41,6 +41,7 @@
       padding: 2.5px 0 0 4px;
       text-align: left;
       height: auto;
+      font-weight: bold;
       font-size: 12px; }
     #sidebar .home-icon .icon {
       margin: 0;
