--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -66,7 +66,7 @@
   float: left;
   border: 1px solid #b3b3b3;
   border-top: none;
-  width: 757px; }
+  width: 797px; }
   #content h1 {
     padding-left: 10px;
     margin: 3px 0px 3px 0px; }
@@ -101,7 +101,7 @@
   height: 30px;
   padding: 0 10px 0 0; }
 #builder .left {
-  width: 350px;
+  width: 390px;
   height: 100%;
   border-right: 1px solid #b3b3b3;
   padding: 0 0 27px 10px; }
@@ -198,26 +198,25 @@
 
 #emulator-wrapper {
   float: left;
-  width: 340px; }
+  width: 363px;
+  margin-left: -5px;
+  padding: 101px 0 78px 27px;
+  background: url(/images/phone.png); }
 
 #emulator {
   position: relative;
+  height: 480px;
   border: 4px solid #1d4088;
   background: #edeff4;
-  overflow: hidden;
-  height: 480px; }
+  overflow: hidden; }
 
 #emulator-scroller {
   width: 335px;
   height: 480px; }
 
 #emulator.portrait {
-  width: 340px;
+  width: 335px;
   min-height: 480px; }
-
-#emulator.landscape {
-  width: 480px;
-  height: 340px; }
 
 #builder .loader-overlay {
   position: absolute;
