--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -208,26 +208,27 @@
 
 #emulator-wrapper {
   float: left;
-  width: $emulator-width; }
+  width: 390px - 27px; // this is the width of the phone image
+  margin-left: -5px;
+  padding: 101px 0 78px 27px;
+  background: url(/images/phone.png);
+}
 
 #emulator {
   position: relative;
+  height: 480px;
   border: 4px solid #1d4088;
   background: $light-bg-color;
   overflow: hidden;
-  height: 480px; }
+}
 
 #emulator-scroller {
   width: 335px;
   height: 480px; }
 
 #emulator.portrait {
-  width: $emulator-width;
+  width: $emulator-width - 45;
   min-height: 480px; }
-
-#emulator.landscape {
-  width: 480px;
-  height: $emulator-width; }
 
 #builder .loader-overlay {
   position: absolute;
