--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -386,12 +386,12 @@
   
   script.category-cat(type="text/template")
     .category.item class="{{ cycle }} <%if(order==0) print('first');%>" data-cat="{{ catName }}|{{ order }}"
-      .cat-name {{ catName }}
+      | {{ catName }}
 
   script.category-page(type="text/template")
     | <% for (var i=0; i<cats.length;i++) {
               print( catTemplate({ catName:cats[i], cycle:util.cycle('c0','c1'), order:i }) );
-    | } if (cats.length > 0) { %>
+    | } if (cats.length > 0 && items.length > 0) { %>
     .divider
     | <% } for (var i=0;i<items.length;i++) {
     |         print( itemTemplate({ item:items[i], cycle:util.cycle('c0','c1'), order:i }) );
@@ -402,7 +402,7 @@
     |       for (var i=0; i<cats.length;i++) {
     |         print( catTemplate({ catName:cats[i], cycle:util.cycle('c0','c1'), order:i }) );
     |       } 
-    |       if (cats.length > 0) { %>
+    |       if (cats.length > 0 && items.length > 0) { %>
     .divider
     | <%    } for (var i=0;i<items.length;i++) { %>
     .leaf-name.item class="<% print(util.cycle('c0','c1')); %> <%if(i==0) print('first');%>"
@@ -579,8 +579,8 @@
     input type="button" name="back" value="< Back"
     input type="button" name="add_cat" value="Add"
     | <%       if (areCatsEmpty == false) { %>
-    input type="button" name="edit_cat" value="Edit"
     input type="button" name="rename_cat" value="Rename"
+    input type="button" name="edit_cat" value="Edit"
     input type="button" name="rem_cat" value="Delete"
     | <% } %>
     br
@@ -605,6 +605,9 @@
     br
     input type="button" name="add_item" value="Add"
     | <%       if (areItemsEmpty == false) { %>
+    | <%            if (_maybe.isWidgetPageTree == true) { %>
+    input type="button" name="rename_item" value="Rename"
+    | <%            } %>
     input type="button" name="edit_item" value="Edit"
     input type="button" name="rem_item" value="Delete"
     | <%       } %>
