--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -238,9 +238,8 @@ a img {
 .page .content.category, .page .content.page_tree {
   padding: 0 0 20px 0 !important;
   .item {
-    padding: 16px 12px;
+    padding: 16px 12% 16px 12px;
     font-size: 16px;
-    .cat-name { width: 90%; }
     & > div { padding-bottom: 2px; }
     img {
       max-height: 290px;
