Added recaptcha and first/last names to signup process

--- a/app/views/builder/_social-share.html.erb
+++ b/app/views/builder/_social-share.html.erb
@@ -8,8 +8,7 @@ curl = "http://www.yomobi.com"
 title = u "YoMobi - The Ultimate Mobile Website Builder"
 %>
 
-<ul class="social-share">
-  <li style="padding-top: 3px;font-size:14px">Share:</li>
+<ul class="social-share lfloat">
   <li><span  class='st_facebook_button' displayText='Facebook'></span></li>
   <li><span  class='st_twitter_button' displayText='Tweet'></span></li>
   <li><span  class='st_linkedin_button' displayText='LinkedIn'></span></li>
