--- a/app/views/registrations/new.slim
+++ b/app/views/registrations/new.slim
@@ -1,6 +1,6 @@
 = form_for resource, :as => resource_name, :url => registration_path(resource_name), :html => { :class => 'center-box', :id => 'signin-box' } do |f|
   
-  h2 YoMobi Email
+  h2 YoMobi Signup
 
   - if @user.errors
     .login-error
@@ -13,6 +13,12 @@
         a href=session_path(:user) Click here to sign in
   
   #actual-signin-box
+    .group.clearfix
+      = f.label 'First name:'
+      = f.text_field :first_name
+    .group.clearfix
+      = f.label 'Last name:'
+      = f.text_field :last_name
     .group.clearfix
       = f.label 'Email:'
       = f.text_field :email
@@ -27,11 +33,9 @@
       = f.select :company_type_id, options_for_select(company_types, @user.company_type_id)
     .group.clearfix
       - unless @hide_captcha
-        p
-          | Enter both words below, separated by a space.
-          br
-          | Can't read the words below? Try different words or an audio captcha.
+        p Enter both words below, separated by a space:
         = recaptcha_tags
+        p Can't read the words above? Try different words or an audio captcha.
     .meta-group
       .main-btn.lfloat
         input.content type="submit" value="Sign Up"
