--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -152,7 +152,16 @@ p.success {
 #footer {
   border-top: 1px solid #b3b3b3;
   margin: 20px auto;
-  padding: 10px 10px 0; }
+  padding: 10px 10px 0;
+  font-size: 12px; }
+  #footer .copyright {
+    float: left;
+    margin: 5px 60px 0 0; }
+  #footer .site-links {
+    float: left;
+    margin: 2px 0 0 50px; }
+    #footer .site-links a, #footer .site-links a:visited {
+      color: #000; }
 
 .social-share {
   margin: 0;
