Fixed bug where clicking to edit builder panels was not registering

--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -13,7 +13,7 @@ ul
   li.option.edit-settings
     .icon
     a href=builder_main_path(:anchor => 'edit-settings') General Settings
-  li.option.text class=active?('booster',active)
+  li.option.edit-keywords class=active?('booster',active)
     .icon
     a href=builder_main_path(:anchor => 'edit-keywords') Traffic Booster
   li.option.edit-tab-bar
