Added mailto link in footer

--- a/app/views/shared/_footer-links.html
+++ b/app/views/shared/_footer-links.html
@@ -2,6 +2,6 @@
   <a href="#">About</a>    <span class="dot">&middot;</span>
   <a href="#">Privacy</a>  <span class="dot">&middot;</span>
   <a href="#">Terms</a>    <span class="dot">&middot;</span>
-  <a href="#">Feedback</a> <span class="dot">&middot;</span>
+  <a href="mailto:feedback@yomobi.com">Feedback</a> <span class="dot">&middot;</span>
   <a href="#">Help</a>
 </div>
