--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -211,13 +211,18 @@ script.property-listings-item
     
     div
       a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
+
     | <% if (item.photo_url) { %>
     div
       a href="{{ item.photo_url }}" View Property
     | <% } %>
+
+    | <% if (_maybe.mls) { %>
     .mls
       ' MLS #:
       a href="http://www.realtor.com/search/searchresults.aspx?mlslid={{ item.mls }}" {{ item.mls }}
+    | <% } %>
+    
     .desc.long {{ item.desc }}
 
 script.locations-item
