Updated keywords editor icon

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -113,7 +113,7 @@
   
   script.edit-keywords(type="text/template")
     .header.edit-keywords
-      .icon{ style="background-image: url(/images/edit-settings.png)" }
+      .icon{ style="background-image: url(/images/edit-keywords.png)" }
       .widget-name
         | Traffic Booster
       p.help-text
