--- a/app/views/registrations/new.slim
+++ b/app/views/registrations/new.slim
@@ -14,10 +14,10 @@
   
   #actual-signin-box
     .group.clearfix
-      = f.label 'First name:'
+      = f.label 'First Name:'
       = f.text_field :first_name
     .group.clearfix
-      = f.label 'Last name:'
+      = f.label 'Last Name:'
       = f.text_field :last_name
     .group.clearfix
       = f.label 'Email:'
