Front page and footer tweaks

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -158,8 +158,8 @@ p.success {
     float: left;
     margin: 5px 60px 0 0; }
   #footer .site-links {
-    float: left;
-    margin: 2px 0 0 50px; }
+    float: right;
+    margin: 5px 0 0 0; }
     #footer .site-links a, #footer .site-links a:visited {
       color: #000; }
 
