--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -164,8 +164,8 @@ p.success {
     margin: 5px 60px 0 0;
   }
   .site-links {
-    float: left;
-    margin: 2px 0 0 50px;
+    float: right;
+    margin: 5px 0 0 0;
     a, a:visited { color: #000; }
   }
 }
