--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -8,7 +8,7 @@ ul
     a href=builder_email_path Email Your Followers
   li.option.text class=active?('text',active)
     .icon
-    a href=builder_text_path Send Text to Your Followers
+    a href=builder_text_path Text Your Followers
   li.spacer
   li.option.edit-settings
     .icon
