--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -13,7 +13,8 @@ input[type=file] {
 
 .explanation {
   background: #e4edf8;
-  padding: 10px;
+  padding: 8px 8px 0;
+  margin-bottom: 10px;
   border: 1px solid #ccc; }
 
 label {
