--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -16,7 +16,8 @@ input[type=file] {
 
 .explanation {
   background: #e4edf8; 
-  padding:10px;
+  padding: 8px 8px 0;
+  margin-bottom: 10px;
   border: 1px solid #ccc;
 }
 
