Copy & ui tweaks

--- a/app/views/signup/_signup-step-arrows.slim
+++ b/app/views/signup/_signup-step-arrows.slim
@@ -4,7 +4,7 @@
     .back.part
     .content
       .title Step 1
-      label Website Info
+      label General Info
     .point.part
   
   .arrow class=active_arrow?(step, 2)
@@ -16,7 +16,7 @@
   .arrow class=active_arrow?(step, 3)
     .content
       .title Step 3
-      label Site Logo
+      label Site Picture
     .point.part
   
   .arrow class=active_arrow?(step, 4)
