Title copy changes, added a button separator div

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -5,7 +5,7 @@ html lang="en-US"
     = render 'shared/meta-description'
     = render 'shared/meta-keywords'
 
-    title YoMobi | Create free mobile website builder and design | Best mobile sites for business and individual
+    title YoMobi - Free Mobile Website Builder Platform
     = stylesheet_link_tag 'builder-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
     = stylesheet_link_tag 'jquery.wysiwyg'
