--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -581,6 +581,8 @@
       | <% } %>
     br
     input type="button" name="back" value="< Back"
+    .button-divider.lfloat
+
     input type="button" name="add_cat" value="Add"
     | <%       if (areCatsEmpty == false) { %>
     input type="button" name="rename_cat" value="Rename"
