Fixed a weird edge case for displaying custom_page widget content

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -220,6 +220,7 @@
   / =====================
   script.custom_page-page(type="text/template")
     | {{ _maybe.content }}
+    .clearfix
   
   script.phone-page(type="text/template")
     p Call us at:
