Added privacy and terms pages

--- a/app/views/shared/_footer-links.html.erb
+++ b/app/views/shared/_footer-links.html.erb
@@ -1,7 +1,7 @@
 <div class="site-links">
   <a href="#">About</a>    <span class="dot">&middot;</span>
-  <a href="#">Privacy</a>  <span class="dot">&middot;</span>
-  <a href="#">Terms</a>    <span class="dot">&middot;</span>
+  <a href="<%= privacy_path %>">Privacy</a>  <span class="dot">&middot;</span>
+  <a href="<%= terms_path %>">Terms</a>    <span class="dot">&middot;</span>
   <a href="mailto:feedback@yomobi.com">Feedback</a> <span class="dot">&middot;</span>
   <a href="#">Help</a>
 </div>
