Updated builder landing help content

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -34,5 +34,15 @@ h1 = @company.name
         em Click on a widget in the Mobile Phone Emulator to edit it here.
       .divider style="border-color:#E0E1E2;margin:0 10px 10px 10px"
       .widget-editor
-        img src="/images/home-help.png"
+        #builder-help
+          label To Start:
+          ul
+            li Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
+            li
+              img src="/images/builder-help-drag.png"
+            li.spacer
+            li.or OR
+            li Click on a widget in the Mobile Phone Emulator to enter your information.
+            li
+              img src="/images/builder-help-edit.png"
     .clearfix
